# matex

./: AUTHORS  LICENSE  Makefile.am  Makefile.in  README.md  README.old.md  _config.yml  about.md  aclocal.m4  build.sh  config.h.in  configure  configure.ac  index.html
_posts/: 2016-06-17-matex-tf.markdown
autom4te.cache/: output.1  requests  traces.0  traces.1
contrib/ARPACK/: Makefile.inc
contrib/ARPACK/BLAS/: xerbla.f
m4/: ga_check_package.m4  matex_arg_parse.m4  matex_blas.m4  matex_lapack.m4  matex_mpi_unwrap.m4  matex_mpicc.m4  matex_mpicxx.m4  matex_mpif77.m4  matex_with_mpi.m4
src/assoc_rules/: comm.cpp  dataset.cpp  dataset.hpp  distance.hpp  driver.cpp  fpgrowth.cpp  fpgrowth.hpp  fpheader.h  fpstack.h  merge_prune.cpp
src/deeplearning/: .gitignore  README.md  cifar_mpi_reader.py  csv_mpi_reader.py  mnist_mpi_reader.py  mpi-tensorflow.py  mpi-tensorflow.py~  mpi-tensorflow_alexnet.py  pnetcdf.py  tf_alexnet.py
src/deeplearning/examples/: README.md  mnist_mpi_reader.py  pycaffe_test.py
src/deeplearning/tensorflow/: INSTALL.md  INSTALL.old.md  INSTALL.txt  README.md  features  mpi-tensorflow.py  mpi-tensorflow_alexnet.py
src/deeplearning/tensorflow/cpu/py3.x/: activate_mtx.sh  clean_up.csh  clean_up.sh  deactivate_mtx.sh  install_mpi_tf.csh  install_mpi_tf.sh  install_tf_matex_0.7.0.sh  run_TFEnv.csh  run_TFEnv.sh  setAlias.sh
src/deeplearning/tensorflow/cpu/py3.x/deprecated/: install_mpi_tf.sh  install_mpi_tf_matex0.6.5.csh  install_mpi_tf_matex0.6.5.sh  run_TFEnv.csh  setAlias.csh
src/deeplearning/tensorflow/cpu/py3.x/parallel-netcdf-1.7.0/: configure  rules.make
src/deeplearning/tensorflow/cpu/py3.x/py_scripts/: Readme.md  datasets.py  lenet3.py  test1.sh  test4.sh
src/deeplearning/tensorflow/cpu/py3.x/user_ops/: Makefile  tf_broadcast.cc  tf_reduce.cc  tf_sync.cc
src/deeplearning/tensorflow/cpu/py3.x/utils/: strippy.pl  strippyd.pl  tensorflow_backend.py
src/deeplearning/tensorflow/examples/: pnetcdf.py  tensorflow_test.py
src/deeplearning/tensorflow/examples/glibc_after_2.19/MNIST/: keras_lenet3.py
src/deeplearning/tensorflow/examples/glibc_after_2.19/MNIST_KERAS/: keras_lenet3.py
src/deeplearning/tensorflow/examples/glibc_after_2.23/ImageNet/: ImageNet_tme_hybrid.sh  ImageNet_tme_hybrid2.sh  ImageNet_tme_hybrid4.sh  ImageNet_tme_keras.sh  ImageNet_tme_keras2.sh
src/deeplearning/tensorflow/examples/glibc_after_2.23/MNIST/: LeNet_hybrid.sh  LeNet_keras.sh  LeNet_keras4.sh  LeNet_tf.sh  LeNet_tf8.sh
src/deeplearning/tensorflow/examples/glibc_before_2.19/MNIST/: keras_lenet3.py
src/deeplearning/tensorflow/examples/glibc_before_2.23/ImageNet/: ImageNet_tme_hybrid.sh  ImageNet_tme_hybrid4.sh  ImageNet_tme_hybrid8.sh  ImageNet_tme_keras.sh  ImageNet_tme_keras8.sh
src/deeplearning/tensorflow/examples/glibc_before_2.23/MNIST/: LeNet_hybrid.sh  LeNet_keras.sh  LeNet_keras4.sh  LeNet_keras8.sh  LeNet_tf.sh  LeNet_tf4.sh
src/deeplearning/tensorflow/examples/newerKernel/ImageNet/: ImageNet_tme_hybrid.sh  ImageNet_tme_hybrid8.sh  ImageNet_tme_keras4.sh  ImageNet_tme_keras8.sh  keras_helpers.py
src/deeplearning/tensorflow/examples/newerKernel/MNIST/: LeNet_hybrid2.sh  LeNet_hybrid4.sh  LeNet_hybrid8.sh  LeNet_keras.sh  LeNet_keras2.sh  LeNet_keras4.sh  LeNet_keras8.sh  LeNet_tf.sh  LeNet_tf2.sh  LeNet_tf4.sh  hybrid_lenet3.py  keras_lenet3.py  tf_lenet3.py
src/deeplearning/tensorflow/examples/olderKernel/ImageNet/: ImageNet_tme_hybrid.sh  ImageNet_tme_hybrid2.sh  ImageNet_tme_keras2.sh  ImageNet_tme_keras4.sh  hybrid_timetest.py  keras_timetest.py
src/deeplearning/tensorflow/examples/olderKernel/MNIST/: LeNet_hybrid.sh  LeNet_hybrid2.sh  LeNet_hybrid4.sh  LeNet_hybrid8.sh  LeNet_keras.sh  LeNet_keras2.sh  LeNet_keras4.sh  LeNet_keras8.sh  LeNet_tf2.sh  LeNet_tf8.sh  hybrid_lenet3.py  keras_lenet3.py  tf_lenet3.py
src/deeplearning/tensorflow/gpu/py3.x/: activate_mtx.sh  clean_up.csh  clean_up.sh  install_mpi_tf.csh  install_mpi_tf.sh  install_mpi_tf_cuda8_0.sh  install_mpi_tf_matex0.6.5.csh  install_mpi_tf_matex0.6.5.sh  install_tf_matex_0.7.0_cu9.1.sh  run_TFEnv.csh  run_TFEnv.sh  setAlias.sh
src/deeplearning/tensorflow/gpu/py3.x/deprecated/: install_mpi_tf_cuda8_0.sh  install_mpi_tf_cuda8_0_matex0.6.5.sh  run_TFEnv.csh  run_TFEnv.sh
src/deeplearning/tensorflow/gpu/py3.x/parallel-netcdf-1.7.0/: ttt
src/deeplearning/tensorflow/gpu/py3.x/py_scripts/: datasets.py  keras_layers.py  test1.sh  test4.sh  test_lenet.sh
src/deeplearning/tensorflow/gpu/py3.x/user_ops/: Makefile  tf_bind.cc  tf_reduce.cc  (+2 more)
src/deeplearning/tensorflow/py_scripts/: keras_nets.py  test4.sh  test_lenet.sh  time_test.py
src/deeplearning/tensorflow/tensorflow_070/: cifar_mpi_reader.py  mpi-tensorflow.py
src/deeplearning/tensorflow_old/: README.md
src/deeplearning/tensorflow_old/tensorflow_070/: mpi-tensorflow.py
src/supervised/knn/: comm.hpp  dataset.cpp  dataset.hpp  distance.cpp  driver.cpp  knn.cpp  knn.hpp
src/supervised/knn/.deps/: matex_knn-comm.Po  matex_knn-dataset.Po  matex_knn-distance.Po  matex_knn-driver.Po  matex_knn-knn.Po
src/supervised/svm/: comm.cpp  comm.hpp  dataset.cpp  dataset.hpp  distance.cpp  fpgrowth.hpp  makefile  smo.cpp  smo.hpp  smo_parallel.cpp  testing.cpp
src/supervised/svm/.deps/: matex_svm-comm.Po  matex_svm-dataset.Po  matex_svm-distance.Po  matex_svm-driver.Po  matex_svm-smo.Po  matex_svm-testing.Po
src/supervised/svm_approx/: comm.cpp  dataset.hpp  driver.cpp  makefile  smo.cpp  stats.cpp
src/supervised/svm_shrinking/: comm.hpp  dataset.cpp  distance.cpp  distance.hpp  shrinking.cpp  smo.cpp  smo.hpp  stats.hpp  testing.cpp
src/supervised/svm_shrinking/.deps/: matex_svm_shrinking-comm.Po  matex_svm_shrinking-dataset.Po  matex_svm_shrinking-distance.Po  matex_svm_shrinking-driver.Po  matex_svm_shrinking-shrinking.Po  matex_svm_shrinking-smo.Po  matex_svm_shrinking-testing.Po
src/unsupervised/kmeans/: dataset.cpp  dataset.hpp  distance.cpp  distance.hpp  driver.cpp  kmeans.cpp  kmeans.hpp
src/unsupervised/spectralclustering/: commands  common.h  compute_distance.cc  distance_to_similarity.cc  evd.cc
(+16 files in other folders)
